# supplycahinlib

./: README.md  pyproject.toml
src/supplychainlib/: __init__.py  aws_dynamodb.py  aws_lambda.py  aws_s3.py  aws_sns.py  utility.py
