[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supplychainlib"
version = "0.1.0"
description = "A private Python library for AWS service integrations in the Supply Chain project"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Shridhar Malaghan", email = "x24280691@student.ncirl.ie"}
]
description = "A Python library for AWS integrations used in the Supply Chain Management project"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"