[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supplychainlib"
version = "0.0.1"
authors = [
    {name = "Shridhar Malaghan", email = "x24280691@student.ncirl.ie"}
]
description = "A Python library for AWS integrations used in the Supply Chain Management project"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Shridhar24280691/supplycahinlib"
"Bug Tracker" = "https://github.com/Shridhar24280691/supplycahinlib/issues"